[package]
name = "gfwdns"
version = "0.0.1"
edition = "2021"
authors = [ "Mokona Modoki" ]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
anyhow = "1.0.65"
dns-parser = "0.8.0"
clap = { version = "3.2.22", features = ["derive"] }

