[package]
name = "gfuckw"
version = "0.2.6"
edition = "2021"
authors = [ "Mokona Modoki" ]
license = "GPL-3.0"
description = "A toolchain for anti-censorship"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
anyhow = "1.0.65"
dns-parser = "0.8.0"
clap = { version = "3.2.22", features = ["derive"] }
fastrand = "1.8.0"
smol-timeout = "0.6.0"

